Fix navbar empty gap by adding 100 view height to body of each page.

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
   overflow-x: hidden;
+  margin-bottom: 45px !important;
+  height: 100vh;
 }
 
 /* Header */
